--- a/ツール使い方.md
+++ b/ツール使い方.md
@@ -17,8 +17,8 @@
 
 💡 注意点:
 - 初回のみAmazonへの手動ログインが必要です
-- 完全なシリーズ特定は困難なため、整理補助ツールとしての活用を推奨します。
-- もし何らかの要因でツールによって開かれたブラウザがツール終了後も閉じない場合は手動で閉じてください。
+- 初回の手動ログイン以降、実行毎のログイン不要とするため専用のchromeプロファイルが作成されます。不要であれば削除してください。 C:\Users\%USERNAME%\AppData\Local\Google\Chrome\MyKindleListProfile
+- 完全なシリーズ特定は困難なため、タイトル整理補助ツールとしての活用を推奨します。
 
 📝備考
 ブラウザを非表示にして裏で操作する方法もあるのですが、進捗の可視化ということでブラウザ表示したままにしてます。
