--- a/ツール使い方.md
+++ b/ツール使い方.md
@@ -20,10 +20,10 @@
 - 初回の手動ログイン以降、実行毎のログイン不要とするため専用のchromeプロファイルが作成されます。不要であれば削除してください。 C:\Users\%USERNAME%\AppData\Local\Google\Chrome\MyKindleListProfile
 - 完全なシリーズ特定は困難なため、タイトル整理補助ツールとしての活用を推奨します。
 
-📝備考
+📝備考  
 ブラウザを非表示にして裏で操作する方法もあるのですが、進捗の可視化ということでブラウザ表示したままにしてます。
 
-⚠️ セキュリティ警告について
+⚠️ セキュリティ警告について   
 本ツール（.exe）は個人でビルドしたもので、Microsoftの公式な署名が付与されていません。  
-そのため、ダウンロード時に「Windows SmartScreen」や「ウイルス検知ソフト」により警告が表示される場合があります。
+そのため、ダウンロード時に「ウイルス検知ソフト」により警告が表示される場合があります。    
 これは **未署名の新しいファイルに対する一般的な挙動であり、ウイルスではありません。**
