--- a/ツール使い方.md
+++ b/ツール使い方.md
@@ -7,7 +7,8 @@
 取得進捗はchromブラウザ上のkindleライブラリページのスクロールが自動で下のほうにスクロールされていくため、それで一応確認可能です。
 
 ⭐必須条件
-- Google Chrome をインストール済みであること
+- OS：windows 11であること
+- ブラウザ：最新のGoogle Chrome をインストール済みであること
 
 ✨ 主な機能:
 - Kindleライブラリの全書籍タイトルを自動取得
